# BACKTESTER

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RELEASE_0.2.0.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_engine.py  benchmark_engine_baseline.json  benchmark_engine_stress_baseline.json  benchmark_results_history.jsonl
cpp/: backtester.cpp  bindings.cpp  policy.cpp
examples/: basic.py  wfo_example.py
include/nanoback/: backtester.hpp  corp_actions.hpp  instrument.hpp  policy.hpp  tick.hpp  venue.hpp
python/nanoback/: __init__.py  analytics.py  calendar.py  costs.py  data.py  ledger.py  loaders.py  montecarlo.py  paper.py  profiling.py  reconcile.py  reporting.py  strategy.py  sweep.py  tca.py  wfo.py  wrapper.py
tests/: sample_strategy.py  test_analytics.py  test_backtester.py  test_corp_actions.py  test_costs.py  test_data.py  test_edge_cases.py  test_execution_realism.py  test_ledger.py  test_loaders.py  test_montecarlo.py  test_paper.py  test_reconcile.py  test_reporting.py  test_strategy.py  test_sweep.py  test_tca.py  test_ticks.py  test_visualization.py  test_wfo.py  test_zero_copy.py
tests/fixtures/: expected_simple_ledger.json
